--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                 <h2>📚 Документація</h2>
             </div>
             <div class="card-body" style="text-align: center;">
-                <a href="./docs/user-guide.md" class="btn">👤 Посібник користувача</a>
-                <a href="./docs/technical-docs.md" class="btn btn-secondary">🔧 Технічна документація</a>
-                <a href="./README.md" class="btn">📋 README</a>
+                <a href="user-guide.md" class="btn">👤 Посібник користувача</a>
+                <a href="technical-docs.md" class="btn btn-secondary">🔧 Технічна документація</a>
+                <a href="README.md" class="btn">📋 README</a>
             </div>
         </div>
 
